--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT=8000
-MONGODB_URI="mongodb://localhost:27017"
+
+MONGODB_URI="mongodb://localhost:27017/goclock"
+# MONGODB_URI="mongodb+srv://vaibhavs7312:<password>@cluster0.lpazpbz.mongodb.net/"
+# SECRET_KEY=ToFu0WA2OR66q3Nq
+# 157.34.110.228/32
+
+# My IP Address
