mongo-url-change

--- a/.env
+++ b/.env
@@ -1,8 +1,4 @@
 PORT=8000
 
-MONGODB_URI="mongodb://localhost:27017/goclock"
-# MONGODB_URI="mongodb+srv://vaibhavs7312:<password>@cluster0.lpazpbz.mongodb.net/"
-# SECRET_KEY=ToFu0WA2OR66q3Nq
-# 157.34.110.228/32
-
-# My IP Address
+# MONGODB_URI="mongodb://localhost:27017/goclock";
+DB="mongodb+srv://vaibhavs7312:6QIb63Zi0FqTsO4a@cluster0.vdjzd6j.mongodb.net/"
