--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "backend",
+  "name": "grow-frontend",
   "version": "1.0.0",
-  "description": "manufraturing and transporting dashboard create",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
