--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8000
 
 # MONGODB_URI="mongodb://localhost:27017/goclock";
-DB="mongodb+srv://vaibhavs7312:6QIb63Zi0FqTsO4a@cluster0.vdjzd6j.mongodb.net/"
+DB="mongodb+srv://vaibhavs7312:Wu65fcchGeM3lrSO@cluster0.gat2obk.mongodb.net/"
